--- a/EDEDSMVisualizer/packages.config
+++ b/EDEDSMVisualizer/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Fast-Bitmap" version="1.1.2" targetFramework="net461" />
+  <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net461" />
+  <package id="MahApps.Metro" version="1.5.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="Ookii.Dialogs" version="1.0" targetFramework="net461" />
 </packages>
