--- a/EDEDSMVisualizer/packages.config
+++ b/EDEDSMVisualizer/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Fast-Bitmap" version="1.1.2" targetFramework="net461" />
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net461" />
+  <package id="Gu.Wpf.Adorners" version="1.3.1.0" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Ookii.Dialogs" version="1.0" targetFramework="net461" />
