--- a/EDEDSMVisualizer/packages.config
+++ b/EDEDSMVisualizer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ColorMine" version="1.2.0" targetFramework="net461" />
   <package id="Fast-Bitmap" version="1.1.2" targetFramework="net461" />
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net461" />
   <package id="Gu.Wpf.Adorners" version="1.3.1.0" targetFramework="net461" />
